cambios en mi css

--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
         <!--Aquí pondremos la cabecera de la web-->
         <div id="cabeceraContenido">
             <div id="cabeceraImagenNombre">erika
-                <div id="imagenNombreRedondo">foto</div>
+                <div id="imagenNombreRedondo"></div>
                 <div id="nombreRectangulo">erika</div>
             </div>
-        <div id="cabeceraMenu">menu2</div>
+            <div id="cabeceraMenu">
+                <ul>
+                    <li><a href="">INICIO</a></li>
+                    <li><a href="">MIS LIBROS</a></li>
+                    <li><a href="">MI MÚSICA</a></li>
+                    <li><a href="">MIS VIDEOS</a></li>
+                    <li><a href="">CONTACTENOS</a></li>
+                    <li><a href="">ACERCA DE</a></li>
+                </ul>
+            </div>
         </div>
         <!--Aquí pondremos el cuerpo del index-->
         <div id="cuerpoContenido"></div>
