mi primer proyecto

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div id="cabeceraMenu">
                 <ul>
-                    <li><a href="">INICIO</a></li>
+                    <li id="logoInicio"><a href="">INICIO</a></li>
                     <li><a href="">MIS LIBROS</a></li>
                     <li><a href="">MI MÚSICA</a></li>
                     <li><a href="">MIS VIDEOS</a></li>
@@ -25,7 +25,13 @@
             </div>
         </div>
         <!--Aquí pondremos el cuerpo del index-->
-        <div id="cuerpoContenido"></div>
+        <div id="cuerpoContenido">
+            <div id="cuerpoImagen">
+                <img src="/img/Recurso 1.png" head="400" width="400">
+
+            </div>
+            <div id="cuerpoDetalle"></div>
+        </div>
         <!--Aquí colocaremos el pie de la web-->
         <footer></footer>
     </body>
