--- a/index.html
+++ b/index.html
@@ -27,10 +27,25 @@
         <!--Aquí pondremos el cuerpo del index-->
         <div id="cuerpoContenido">
             <div id="cuerpoImagen">
-                <img src="/img/Recurso 1.png" head="400" width="400">
-
+                <div id="bordeImagen">
+                    <img src="/img/Recurso 1.png" head="400" width="480">
+                </div>
             </div>
-            <div id="cuerpoDetalle"></div>
+            <div id="cuerpoDetalle">
+                <h1>bienvenido</h1>
+                <div id="datosDetalle">
+                    <p>¡Bienvenido a bordo! Nos alegra enormemente que hayas decidido unirte como nuestro nuevo cliente. Prepárate para disfrutar de una experiencia impecable que sentará las bases de una colaboración fructífera. Estamos ansiosos por comenzar esta emocionante travesía juntos.Gracias por elegirnos como tu aliado de confianza. Estamos encantados de servirte y hacer que tu proceso de incorporación sea eficiente, agradable y gratificante
+                    </p>
+                </div>
+                <div id="botones">
+                    <div id="botonFavorito">
+                        persona favorita
+                    </div>
+                    <div id="botonUbicacion">
+                        mi ubicación
+                    </div>
+                </div>
+            </div>
         </div>
         <!--Aquí colocaremos el pie de la web-->
         <footer></footer>
