--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="">MI MÚSICA</a></li>
                     <li><a href="">MIS VIDEOS</a></li>
                     <li><a href="">CONTACTENOS</a></li>
-                    <li><a href="">ACERCA DE</a></li>
+                    <li><a href="">ACERCA  DE</a></li>
                 </ul>
             </div>
         </div>
@@ -39,15 +39,41 @@
                 </div>
                 <div id="botones">
                     <div id="botonFavorito">
-                        persona favorita
+                        <div id="marcoFavorito" class="disenoBoton">
+                           mi persona favorita.
+                        </div>
                     </div>
                     <div id="botonUbicacion">
-                        mi ubicación
+                        <div id="marcoUbicacion" class="disenoBoton">
+                            mi ubicación favorita.
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <!--Aquí colocaremos el pie de la web-->
-        <footer></footer>
+        <footer>
+            <div id="menuFooter">
+                <nav>
+                    <a href="">INICIO</a>
+                    <a href="">MIS LIBROS</a>
+                    <a href="">MI MÚSICA</a>
+                    <a href="">MIS VIDEOS</a>
+                    <a href="">CONTACTENOS</a>
+                    <a href="">ACERCA  DE</a>
+                </nav>
+            </div>
+            <div id="contenidoFooter">
+                <p>Esta sección te da la bienvenida a mi sitio web, espero te guste wiiii</p>
+            </div>
+            <div id="socialFooter">
+                <ul>
+                    <li><img src="img/Recurso 3.png"></li>
+                    <li><img src="img/Recurso 4.png"></li>
+                    <li><img src="img/Recurso 5.png"></li>
+                    <li><img src="img/Recurso 7.png"></li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
