--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </div>
         <!--Aquí colocaremos el pie de la web-->
         <footer>
+        <div id="marcoFooter">
             <div id="menuFooter">
                 <nav>
                     <a href="">INICIO</a>
@@ -67,13 +68,14 @@
                 <p>Esta sección te da la bienvenida a mi sitio web, espero te guste wiiii</p>
             </div>
             <div id="socialFooter">
-                <ul>
+                <ul class="socialesFooter">
                     <li><img src="img/Recurso 3.png"></li>
                     <li><img src="img/Recurso 4.png"></li>
                     <li><img src="img/Recurso 5.png"></li>
                     <li><img src="img/Recurso 7.png"></li>
                 </ul>
             </div>
+        </div>
         </footer>
     </body>
 </html>
